# proculate

./: Cargo.toml  README.md  prek.toml
.zed/: settings.json
proculate-core/: Cargo.toml
proculate-core/src/: lib.rs  noise.rs  numeric.rs
proculate-core/src/multi_d/: mod.rs  params.rs  scheme.rs  solve.rs
proculate-core/src/one_d/: mod.rs  params.rs  scheme.rs  solve.rs
proculate-core/tests/: multi_d.rs  one_d.rs
proculate-wasm/: Cargo.toml
proculate-wasm/src/: lib.rs
proculate-web/: README.md  biome.json  bunfig.toml  eslint.config.js  index.html  package.json  server.ts  tsconfig.json
proculate-web/src/: main.tsx  styles.css
proculate-web/src/domain/: statistics.ts  timeseries.ts
proculate-web/src/features/: Distribution.tsx  MultiDEquationInput.tsx  MultiDOutput.tsx  MultiDSdeInput.tsx  MultiStatisticsTable.tsx  OneDSdeInput.tsx  SamplePaths.tsx  StatisticsTable.tsx  StderrBox.tsx
proculate-web/src/implementation/: wasmSolver.ts
proculate-web/src/layout/: AppLayout.tsx
proculate-web/src/pages/: MultiDSdeSolvePage.tsx  OneDSdeSolvePage.tsx
proculate-web/src/protocol/: solver.ts
proculate-web/src/routes/: router.tsx
proculate-web/src/ui/: Button.tsx  DistributionChart.tsx  Field.tsx  Input.tsx  LineChart.tsx  Panel.tsx  Radio.tsx  Select.tsx  Tabs.tsx  palette.ts  subscript.ts
