[package]
name = "proculate-wasm"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "WASM bindings: parse symbolic mu/sigma and drive proculate-core."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
proculate-core = { workspace = true }
wasm-bindgen = "0.2"
meval = "0.2"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
